--- a/frontend-leis/src/index.html
+++ b/frontend-leis/src/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
-<body style="margin: -10px;">
+<body>
     <app-root></app-root>
 </body>
 
